# notion-server

./: .example.env  Cargo.toml  README.md  REDME.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/graphql/: schema.rs
api/src/graphql/mutation/: block.rs  mod.rs  user.rs  user_setting.rs
api/src/graphql/query/: block.rs  mod.rs  user.rs  user_setting.rs
api/src/jwt/: mod.rs
api/src/util/: code.rs  mod.rs
apollo-router/: .example.env  docker-compose.yaml  router.yaml  supergraph-schema.graphql
config/: Cargo.toml
config/src/: contants.rs  lib.rs
entity/: Cargo.toml  README.md
entity/src/: lib.rs
entity/src/entities/: block.rs  mod.rs  notes.rs  post.rs  prelude.rs  user.rs  user_setting.rs
migration/src/: lib.rs  m20230821_102932_create_user.rs  m20230822_023238_create_block.rs  m20230822_031732_create_user_setting.rs
service/: Cargo.toml
service/src/mutation/: block.rs  mod.rs  user.rs  user_setting.rs
service/src/query/: block.rs  user.rs  user_setting.rs
src/: main.rs
src/token/: mod.rs
