[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.4", features = ["apollo_tracing", "tracing", "chrono", "uuid", "password-strength-validator"] }
async-graphql-axum = "6.0.4"
axum = { version = "0.6.20", features = ["ws", "headers"] }
futures-util = "0.3.28"
hyper = "0.14.27"
serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.75"
migration = { path = "../migration" }
entity = { path = "../entity" }
config = { path = "../config" }
service = { path = "../service" }
tracing = "0.1.37"
sea-orm = { version = "0.12.0", features = ["macros", "debug-print", "runtime-tokio-rustls", "sqlx-postgres"] }
jsonwebtoken = "8.3.0"
chrono = {version = "0.4.26",features = ["serde"]}
rand = "0.8.5"
