[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-json", "with-uuid", "postgres-array" ] }
migration = { path = "../migration" }
once_cell = "1.17.1"
regex = "1.7.1"
async-redis-session = "0.2.2"
axum-sessions = "0.4.1"