[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.async-graphql]
version = "6.0.4"
features = ["chrono", "uuid"]

[dependencies.sea-orm]
version = "0.12.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
default-features = false
